create favorites table, that allow to store user and qustions id, also add method that allow to set favorites

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12003,6 +12003,14 @@ form.form-delete {
   transition: all 0.25s ease-in-out;
 }
 
+.vote-controls a.off {
+  color: #c2c1be;
+}
+
+.vote-controls a.favorited {
+  color: #e3d734;
+}
+
 .vote-controls a.off:hover {
   color: red;
 }
