init procfile for deploy app to heroku, also refactor up and down methods for vote

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12008,7 +12008,7 @@ form.form-delete {
 }
 
 .vote-controls a.favorited {
-  color: #e3d734;
+  color: #ffee00;
 }
 
 .vote-controls a.off:hover {
